--- a/Gnoth Files/index.html
+++ b/Gnoth Files/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Forms - Template</title>
+        <title>Contacts</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
     <body id="page-top" class="cool-color text-primary">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger"class="color-shift" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger color-shift" href="#page-top">
                 <span class="d-block d-lg-none">PTC</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Pittsburgh_Technical_College.jpg" alt="School logo" /></span>
             </a>
@@ -48,13 +48,13 @@
                     <h1>
                         Student Club
                         <br>
-                        <span>Activities and Forms</span>
+                        <span class="text-primary">Activities and Forms</span>
                     </h1>
                     <div class="subheading mb-5 text-primary">
-                        1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
+                       <span id="address">1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·</span>
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
-                    <h2 class="mb-5">Student Organization Cotacts</h2>
+                    <h2 class="mb-5">Student Organization Contacts</h2>
                     <a id="scroll" href="#contacts">Click Here to See Faculty Contacts</a>
                     <!-- 
                         in case we decide we want to add these back eventually for some reason
@@ -72,169 +72,169 @@
             <section class="resume-section" id="contacts">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Student Organization Contacts</h2>
-                    <ul class="fa-ul mb-0 text-primary">
-                        <li>
-                            <u>Anime</u>
+                    <ul id="contact-list" class="fa-ul mb-0 text-primary">
+                        <li class="contactGroup">
+                            <span class="listHead">Anime</span>
                             <ul>
                                 <li>Faculty Advisor: Lee Cottrell</li>
                                 <li>Phone: 412-809-5399 x4837</li>
-                                <li><a href="mailTo:Cottrell.Lee@ptcollege.edu">Email: Cottrell.Lee@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Cottrell.Lee@ptcollege.edu">Cottrell.Lee@ptcollege.edu</a></li>
                                 <li>Tuesday, 4:30-6:30 Room #605</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>ASHARE</u>
+                        <li class="contactGroup">
+                            <span class="listHead">ASHARE</span>
                             <ul>
                                 <li>Faculty Advisor: Scott Lynch</li>
                                 <li>Phone: 412-809-3519</li>
-                                <li><a href="mailTo:Lynch.Scott@ptcollege.edu">Email: Lynch.Scott@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Lynch.Scott@ptcollege.edu">Lynch.Scott@ptcollege.edu</a></li>
                             </ul>
                             
                         </li>
-                        <li>
-                            <u>ASME</u>
+                        <li class="contactGroup">
+                            <span class="listHead">ASME</span>
                             <ul>
                                 <li>Faculty Advisor: Nick Otteni</li>
                                 <li>Phone: 412-809-5399 x4884</li>
-                                <li><a href="mailTo:Otteni.Nicholas@ptcollege.edu">Email: Otteni.Nicholas@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Otteni.Nicholas@ptcollege.edu">Otteni.Nicholas@ptcollege.edu</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <u>ASTA</u>
+                        <li class="contactGroup">
+                            <span class="listHead">ASTA</span>
                             <ul>
                                 <li>Faculty Advisor: Mark Bellemare</li>
                                 <li>Phone: 412-809-5236</li>
-                                <li><a href="mailTo:Bellemare.Mark@ptcollege.edu">Email: BelleMare.Mark@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Bellemare.Mark@ptcollege.edu">BelleMare.Mark@ptcollege.edu</a></li>
                             </ul>   
                         </li>
-                        <li>
-                            <u>Creative Writing Club</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Creative Writing Club</span>
                             <ul>
                                 <li>Faculty Advisor: Jessica Nowacki</li>
                                 <li>Phone: 412-809-5399 x4947</li>
-                                <li><a href="mailTo:DImperio.Cristina@ptcollege.edu">Email: DImperio.Cristina@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:DImperio.Cristina@ptcollege.edu">DImperio.Cristina@ptcollege.edu</a></li>
                                 <li>Tuesday, 4:30-5:30, Room #320</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>Criminal Justice Club</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Criminal Justice Club</span>
                             <ul>
                                 <li>Faculty Advisor: Shannon Wintruba</li>
                                 <li>Phone: 412-809-4903</li>
-                                <li><a href="mailTo:Wintruba.Shannon@ptcollege.edu">Email: Wintruba.Shannon@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Wintruba.Shannon@ptcollege.edu">Wintruba.Shannon@ptcollege.edu</a></li>
                                 
                             </ul>
                         </li>
-                        <li>
-                            <u>Culinary Club</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Culinary Club</span>
                             <ul>
                                 <li>Faculty Advisor: Dave Russo</li>
                                 <li>Phone: 412-809-5100</li>
-                                <li><a href="mailTo:Russo.Dave@ptcollege.edu">Email: Russo.Dave@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Russo.Dave@ptcollege.edu">Russo.Dave@ptcollege.edu</a></li>
                                 <li>Wednesday, 10:30-11:00/4:30-5:00</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>CyberSecurity Club</u>
+                        <li class="contactGroup">
+                            <span class="listHead">CyberSecurity Club</span>
                             <ul>
                                 <li>Faculty Advisor: Michael Russell</li>
                                 <li>Phone: 412-809-5399 X4737</li>
-                                <li><a href="mailTo:Russell.Michael@ptcollege.edu">Email: Russell.Michael@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Russell.Michael@ptcollege.edu">Russell.Michael@ptcollege.edu</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <u>DECA</u>
+                        <li class="contactGroup">
+                            <span class="listHead">DECA</span>
                             <ul>
                                 <li>Faculty Advisor: Tracie Brady</li>
                                 <li>Phone: 412-809-5399 x4627</li>
-                                <li><a href="mailTo:Brady.Tracie@ptcollege.edu">Email: Brady.Tracie@ptcollege.edu</a></li>
+                                <li>Email: <a href="mailTo:Brady.Tracie@ptcollege.edu">Brady.Tracie@ptcollege.edu</a></li>
                                 <li>Monday, 4:30-6:00, Room #511</li>
                             </ul>
-                            <li>
-                                <u>Drama Club</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Drama Club</span>
                                 <ul>
                                     <li>Faculty Advisor: Amber Monigold</li>
                                     <li>Phone: 412-809-5130</li>
-                                    <li><a href="mailTo:Monigold.Amber@ptcollege.edu">Email: Monigold.Amber@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Monigold.Amber@ptcollege.edu">Monigold.Amber@ptcollege.edu</a></li>
                                     <li>Thursday, 5:30-8:00, Room #401.2</li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Dungeons & Dragons</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Dungeons & Dragons</span>
                                 <ul>
                                     <li>Faculty Advisor: Lee Cottrell</li>
                                     <li>Phone: 412-809-5399 x4837</li>
-                                    <li><a href="mailTo:Cottrell.Lee@ptcollege.edu">Email: Cottrell.Lee@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Cottrell.Lee@ptcollege.edu">Cottrell.Lee@ptcollege.edu</a></li>
                                     <li>Mondays, 4:30-10:00, Room #401.2</li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Film Club</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Film Club</span>
                                 <ul>
                                     <li>Faculty Advisor: Lauren Zito</li>
                                     <li>Phone: 412-809-5399 x 4775</li>
-                                    <li><a href="mailTo:Zito.Lauren@ptcollege.edu">Email: Zito.Lauren@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Zito.Lauren@ptcollege.edu">Zito.Lauren@ptcollege.edu</a></li>
                                     <li>Thursday, 5:00-7:00, Room #302</li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Gaming Club</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Gaming Club</span>
                                 <ul>
                                     <li>Faculty Advisor: Dave Hertz</li>
                                     <li>Phone: 412-809-5399 x 4832</li>
-                                    <li><a href="mailTo:Hertz.David@ptcollege.edu">Email: Hertz.David@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Hertz.David@ptcollege.edu">Hertz.David@ptcollege.edu</a></li>
                                     <li>Thursday, 5:00</li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Gay Straight Alliance (GSA)</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Gay Straight Alliance (GSA)</span>
                                 <ul>
                                     <li>Faculty Advisor: Shane McGarvey</li>
                                     <li>Phone: 412-809-5210</li>
-                                    <li><a href="mailTo:McGarvey.Shane@ptcollege.edu">Email: McGarvey.Shane@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:McGarvey.Shane@ptcollege.edu">McGarvey.Shane@ptcollege.edu</a></li>
                                     <li>Wednesday, 4:30-5:30, S/F Lounge</li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>IT Research Certification Club</u>
+                            <li class="contactGroup">
+                                <span class="listHead">IT Research Certification Club</span>
                                 <ul>
                                     <li>Faculty Advisor: Wilfred Mutale</li>
                                     <li>Phone: 412-809-5135</li>
-                                    <li><a href="mailTo:Mutale.Wilfred@ptcollege.edu">Email: Mutale.Wilfred@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Mutale.Wilfred@ptcollege.edu"> Mutale.Wilfred@ptcollege.edu</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Magic Club (The Gathering)</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Magic Club (The Gathering)</span>
                                 <ul>
                                     <li>Faculty Advisor: Dave Hertz</li>
                                     <li>Phone: 412-809-5399 x 4832</li>
-                                    <li><a href="mailTo:Hertz.David@ptcollege.edu">Email: Hertz.David@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Hertz.David@ptcollege.edu">Hertz.David@ptcollege.edu</a></li>
                                     <li>Wednesday, 4:30-10:00, Room #302</li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Recharge</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Recharge</span>
                                 <ul>
                                     <li>Faculty Advisor: Tom McDermott</li>
                                     <li>Phone: 412-809-5399 x4796</li>
-                                    <li><a href="mailTo:McDermott.Tom@ptcollege.edu">Email: McDermott.Tom@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:McDermott.Tom@ptcollege.edu">McDermott.Tom@ptcollege.edu</a></li>
                                     <li>Wednesday, 11:30-12:30, Room #602</li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Software Development Club</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Software Development Club</span>
                                 <ul>
                                     <li>Faculty Advisor: Dave Hertz</li>
                                     <li>Phone: 412-809-5399 x 4832</li>
-                                    <li><a href="mailTo:Hertz.David@ptcollege.edu">Email: Hertz.David@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Hertz.David@ptcollege.edu">Hertz.David@ptcollege.edu</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <u>Women In STEAM</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Women In STEAM</span>
                                 <ul>
                                     <li>Faculty Advisor: Chuck Eltringham</li>
                                     <li>Phone: 412-809-5284</li>
-                                    <li><a href="mailTo:Eltringham.Charles@ptcollege.edu">Email: Eltringham.Charles@ptcollege.edu</a></li>
+                                    <li>Email: <a href="mailTo:Eltringham.Charles@ptcollege.edu">Eltringham.Charles@ptcollege.edu</a></li>
                                 </ul>
                             </li>
                         </li>
