--- a/Gnoth Files/meetEventTrack.html
+++ b/Gnoth Files/meetEventTrack.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Forms - Template</title>
+        <title>Event Tracker</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -51,7 +51,7 @@
                         <span class="text-primary">Activities and Forms</span>
                     </h1>
                     <div class="subheading mb-5">
-                        1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
+                        <span id="address">1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·</span>
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
                     <!-- <h2>Student Organization</h2> -->
@@ -74,7 +74,7 @@
                 <div class="resume-section-content">
                     <section class="mb-5">
                         <h2>Student Organization</h2>
-                        <h3>Meeting/Event Tracker Sheet</h3>
+                        <h3 class="text-primary">Meeting/Event Tracker Sheet</h3>
                     </section>
                     <!-- script gets form from site and updates it as it gets updated on jotform.com -->
                     <script type="text/javascript" src="https://form.jotform.com/jsform/220556465866163"></script> 
