--- a/Gnoth Files/orgGuidelines.html
+++ b/Gnoth Files/orgGuidelines.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Forms - Template</title>
+        <title>Guidelines</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -51,7 +51,7 @@
                         <span class="text-primary">Activities and Forms</span>
                     </h1>
                     <div class="subheading mb-5">
-                        1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·
+                        <span id="address">1111 McKee Road · Oakdale, PA 15071 · 1-800-784-9675 ·</span>
                         <a href="https://www.ptcollege.edu" target="_blank">www.ptcollege.edu</a>
                     </div>
                     <!-- <h2 class="mb-5">Organization Guidelines</h2> -->
@@ -73,16 +73,16 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Organization Guidelines</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <u>Governing Document</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Governing Document</span>
                             <ul>
                                 <li>Develop a governing document (Constitution/Code of Conduct/etc) for your organization that includes the guidelines for members to follow</li>
                                 <li>This document should clearly define student leadershipt opportunities (ex. President, VP, Chairman, Secretary, etc.)</li>
                                 <li>This Document should be reviewd once a year</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>Meetings</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Meetings</span>
                             <ul>
                                 <li>Provide the day, time and location of your meetings and updated at the beginning of every quarter</li>
                                 <li>Organizations should meet a minimum of once a quarter</li>
@@ -90,8 +90,8 @@
                             </ul>
                             
                         </li>
-                        <li>
-                            <u>Finances</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Finances</span>
                             <ul>
                                 <li>All organizations will be given an individual banking account that is maintained by the Director Student Activities. This account is yours to use at your discretion.</li>
                                 <li>All funds raised, gifted, or allotted to the club should be deposited into the student organization's account within 48 hours.</li>
@@ -99,14 +99,14 @@
                                 <li>Any items purchased through the PTC Café can be acquired with a voucher from Student Activities.</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>Fundraising</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Fundraising</span>
                             <ul>
                                 <li>All organizations must complete the Guidelines for Student Organizations Fundraising form prior to organizing event, activity, etc.</li>    
                             </ul>   
                         </li>
-                        <li>
-                            <u>Signage,Rooms & Tables</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Signage,Rooms & Tables</span>
                             <ul>
                                 <li>Signage can be made by a organization member or through our Marketing Department</li>
                                 <li>Signage should be submitted to Student Activities for prior approval before given to Marketing</li>
@@ -114,8 +114,8 @@
                                 <li>If you would like to reserve a table on level 4, notify Student Activities to put on the REservation Calendar</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>Social Media</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Social Media</span>
                             <ul>
                                 <li>Do not create Pittsburgh Technical College social media properties. Do not create social media pages or groups affiliated with Pittsburgh Technical College. 
                                     If you or your PTC organization has news to share via social media, please submit that information to Student Activities</li>
@@ -124,29 +124,29 @@
                                 <li>Any items purchased through the PTC Café can be acquired with a voucher from Student Activities.</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>Campus Environment</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Campus Environment</span>
                             <ul>
                                 <li>Each organization will participate in four PTC sponsored events per year (PTC Carnival, Alcohol Mix-Off, Activities Fairs, etc.)</li> 
                             </ul>
                         </li>
-                        <li>
-                            <u>Community Service</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Community Service</span>
                             <ul>
                                 <li>Each club will sponsor a minimum of one community service project per year</li>
                                 <li>All community service events must be approved by the faculty/staff advisor</li>
                                 <li>The Community Service Event Form should be completed and submitted to the Community Service Coordinator prior to the event.</li>
                             </ul>
                         </li>
-                        <li>
-                            <u>Off Campus Trips</u>
+                        <li class="contactGroup">
+                            <span class="listHead">Off Campus Trips</span>
                             <ul>
                                 <li>Any organization wishing to sponsor a trip to an off-campus activity 
                                     (conference, workshop, and special event) must register this trip with the Student Activites Office</li>
                                 <li>A designated advisor must accompany students on off-campus trips</li>
                             </ul>
-                            <li>
-                                <u>Inactive Status</u>
+                            <li class="contactGroup">
+                                <span class="listHead">Inactive Status</span>
                                 <ul>
                                     <li>It is expected the PTC student organizations follow the guidelines listed above. An organization will be deemed "inactive"
                                         if at least one quarter of total inactivity has been experienced or does not complete the campus environment/community service expectations</li>
